feat: upgrade to Java 21 & Spark 3.5.0 and fix JVM memory access issue